--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,13 +1,8 @@
 <div class="row">
-  <div class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: img -->
-      <div class="card-body text-white">
-        <p class="card-text">
-          Hola Amor
-        </p>
-      </div>
-    </div>
-  </div>
-
+  <gifs-card
+   *ngFor="let gif of gifs"
+    [gif]="gif"
+   class="col-md-3 col-sm-6"
+  ></gifs-card>
 </div>
+
