--- a/src/app/shared/components/lazy-image/lazy-image.component.html
+++ b/src/app/shared/components/lazy-image/lazy-image.component.html
@@ -3,7 +3,7 @@
   <img
   [src]="urlImagen"
   [alt]="alt"
-  class="card-img-top"
+  class="card-img-top animate__animated animate__fadeIn"
   (load)="onLoad()"
   [ngStyle]="{ display: hasLoaded ? '' : 'none' }"
   >
